# serializer version: 1
# name: test_basic_analysis
  list([
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.3333333333333333,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.3333333333333333,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.3333333333333333,
      'dipole_frequency_1': 0.006029931414230269,
      'dipole_frequency_2': 85436.78758379082,
      'dipole_location_1': array([-4.76615152, -6.33160296,  5.29522808]),
      'dipole_location_2': array([-4.72700391, -2.06478573,  6.52467702]),
      'dipole_moment_1': array([ 860.14181416, -450.27082062, -239.60852996]),
      'dipole_moment_2': array([ 908.18325588, -208.52681777, -362.93214244]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.45,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.3103448275862069,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.9,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.6206896551724138,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.06896551724137932,
      'dipole_frequency_1': 102275.63477261562,
      'dipole_frequency_2': 1755280.9783485082,
      'dipole_location_1': array([ 4.71515397, -9.70362197,  5.43016546]),
      'dipole_location_2': array([3.42476038, 3.88562934, 5.15034328]),
      'dipole_moment_1': array([-502.60742674, -790.60222587,  349.7626267 ]),
      'dipole_moment_2': array([-192.42708465, -434.81009148, -879.7226844 ]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.7,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.6631578947368421,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.18947368421052635,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.7,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.1473684210526316,
      'dipole_frequency_1': 2896.799464036654,
      'dipole_frequency_2': 9.980565189326681e-05,
      'dipole_location_1': array([-4.97465789, 12.54716531,  6.06324588]),
      'dipole_location_2': array([  9.84518459, -11.1183876 ,   7.35028226]),
      'dipole_moment_1': array([997.67961917,  19.6376112 ,  65.19004305]),
      'dipole_moment_2': array([305.63093655, 440.57669389, 844.08643362]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.663157894736842,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.18947368421052635,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.1473684210526316,
      'dipole_frequency_1': 1.4522667818288244,
      'dipole_frequency_2': 2704.9795645301197,
      'dipole_location_1': array([ 7.38183022, 16.6745801 ,  7.10428414]),
      'dipole_location_2': array([-8.15636906, -9.56609132,  6.34141559]),
      'dipole_moment_1': array([-145.9924693 ,  738.74936496,  657.97839986]),
      'dipole_moment_2': array([-960.16113239,  104.96824669, -258.98314046]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.9,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.9465776293823038,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.030050083472454105,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.1,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.02337228714524208,
      'dipole_frequency_1': 3827.2315421318913,
      'dipole_frequency_2': 1.9301094166184413e-05,
      'dipole_location_1': array([ 5.02067673, -0.9783039 ,  6.1431897 ]),
      'dipole_location_2': array([ 4.66628999, 10.80907459,  7.21771744]),
      'dipole_moment_1': array([ 871.30659253, -299.17389491, -388.99846068]),
      'dipole_moment_2': array([-189.87268624,  677.28285845,  710.79975568]),
    }),
  ])
# ---
# name: test_bayesss_with_tighter_cost
  list([
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.33333333333333337,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.33333333333333337,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.33333333333333337,
      'dipole_frequency_1': 0.006029931414230269,
      'dipole_frequency_2': 85436.78758379082,
      'dipole_location_1': array([-4.76615152, -6.33160296,  5.29522808]),
      'dipole_location_2': array([-4.72700391, -2.06478573,  6.52467702]),
      'dipole_moment_1': array([ 860.14181416, -450.27082062, -239.60852996]),
      'dipole_moment_2': array([ 908.18325588, -208.52681777, -362.93214244]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.0109375,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.1044776119402985,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.03125,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.2985074626865672,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.0625,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.5970149253731344,
      'dipole_frequency_1': 102275.63477261562,
      'dipole_frequency_2': 1755280.9783485082,
      'dipole_location_1': array([ 4.71515397, -9.70362197,  5.43016546]),
      'dipole_location_2': array([3.42476038, 3.88562934, 5.15034328]),
      'dipole_moment_1': array([-502.60742674, -790.60222587,  349.7626267 ]),
      'dipole_moment_2': array([-192.42708465, -434.81009148, -879.7226844 ]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 7.291135021404688e-05,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.021875,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.4666326413699001,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.0125,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.5332944472798858,
      'dipole_frequency_1': 2896.799464036654,
      'dipole_frequency_2': 9.980565189326681e-05,
      'dipole_location_1': array([-4.97465789, 12.54716531,  6.06324588]),
      'dipole_location_2': array([  9.84518459, -11.1183876 ,   7.35028226]),
      'dipole_moment_1': array([997.67961917,  19.6376112 ,  65.19004305]),
      'dipole_moment_2': array([305.63093655, 440.57669389, 844.08643362]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 7.291135021404688e-05,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.4666326413699001,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.5332944472798858,
      'dipole_frequency_1': 1.4522667818288244,
      'dipole_frequency_2': 2704.9795645301197,
      'dipole_location_1': array([ 7.38183022, 16.6745801 ,  7.10428414]),
      'dipole_location_2': array([-8.15636906, -9.56609132,  6.34141559]),
      'dipole_moment_1': array([-145.9924693 ,  738.74936496,  657.97839986]),
      'dipole_moment_2': array([-960.16113239,  104.96824669, -258.98314046]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 0.175,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 0.00012008361740869356,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.05625,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.24702915581216964,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.15,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.7528507605704217,
      'dipole_frequency_1': 3827.2315421318913,
      'dipole_frequency_2': 1.9301094166184413e-05,
      'dipole_location_1': array([ 5.02067673, -0.9783039 ,  6.1431897 ]),
      'dipole_location_2': array([ 4.66628999, 10.80907459,  7.21771744]),
      'dipole_moment_1': array([ 871.30659253, -299.17389491, -388.99846068]),
      'dipole_moment_2': array([-189.87268624,  677.28285845,  710.79975568]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 4.9116305003549454e-08,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 0.0109375,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.11316396672817797,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.028125,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.886835984155517,
      'dipole_frequency_1': 1.1715179359592061e-05,
      'dipole_frequency_2': 0.0019103783276337497,
      'dipole_location_1': array([-0.95736547,  1.09273812,  7.47158641]),
      'dipole_location_2': array([ -3.18510322, -15.64493131,   5.81623624]),
      'dipole_moment_1': array([-184.64961369,  956.56786553,  225.57136075]),
      'dipole_moment_2': array([ -34.63395137,  801.17771816, -597.42342885]),
    }),
    dict({
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedxy-pfixexp_3-dipole_count_2_prob': 1.977090156727901e-10,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_likelihood': 9.765625e-06,
      'connors_geom-5height-orientation_fixedz-pfixexp_3-dipole_count_2_prob': 0.00045552157211010855,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_likelihood': 0.002734375,
      'connors_geom-5height-orientation_free-pfixexp_3-dipole_count_2_prob': 0.9995444782301809,
      'dipole_frequency_1': 999786.9069039805,
      'dipole_frequency_2': 186034.67996840767,
      'dipole_location_1': array([-5.59679125,  6.3411602 ,  5.33602522]),
      'dipole_location_2': array([-0.03412955, -6.83522954,  5.58551513]),
      'dipole_moment_1': array([826.38270589, 491.81526944, 274.24325726]),
      'dipole_moment_2': array([ 202.74745884, -656.07483714, -726.95204519]),
    }),
  ])
# ---
